tests/macros/select/validate.stderr
error: option `validate` does not exist for kind `select`
 --> $DIR/validate.rs:2:46
  |
2 |     let q = inquisition::questions![Select { validate: todo!() }];
  |                                              ^^^^^^^^
