tests/macros/select/validate.rs
fn main() {
    let q = inquisition::questions![Select { validate: todo!() }];
}
